# PPM_Denoiser

./: CMakeLists.txt  README.md
images/: image07_noisy_10.ppm  image07_noisy_2.ppm  image07_noisy_3.ppm  image07_noisy_8.ppm  image08_clean.ppm  image08_noisy_1.ppm  image08_noisy_2.ppm  image08_noisy_3.ppm  image08_noisy_4.ppm  image08_noisy_6.ppm  image08_noisy_7.ppm  image08_noisy_8.ppm  image08_noisy_9.ppm
src/: main.cpp
